--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon .",
+    "start": "node .",
+    "live": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "method-override": "^3.0.0",
+    "nodemon": "^2.0.7",
     "path": "^0.12.7"
   }
 }
